--- a/D6.html
+++ b/D6.html
@@ -140,20 +140,14 @@
          Scrivi una funzione che aggiunga un paragrafo al primo div
       */
 
-      // const addParagraph = function () {
-      //   const firstDiv = document.querySelector("div");
-      //   console.log(firstDiv);
-      //   const h2 = document.querySelector("h2");
-      //   console.log(h2);
-      //   const newP = document.createElement("p");
-      //   newP.innerText = "Esercizio 6: sono il nuovo p all'interno di un div";
-      //   console.log(newP);
-      //   document.firstDiv.insertBefore(newP, h2);
-      // };
-
-      // addParagraph();
-
-      // console.log("Es 6: completato");
+      const addParagraph = function () {
+        const firstDiv = document.querySelector("div");
+        const newP = document.createElement("p");
+        newP.innerText = "Esercizio 6: sono il nuovo p all'interno di un div";
+        firstDiv.appendChild(newP);
+      };
+      addParagraph();
+      console.log("Es 6: completato");
 
       /* ESERCIZIO 7
          Scrivi una funzione che faccia scomparire la prima lista non ordinata
@@ -161,7 +155,7 @@
 
       const hideFirstUl = function () {
         const firstUl = document.querySelector("#firstList");
-        firstUl.style = "display: none";
+        firstUl.remove();
       };
       hideFirstUl();
       console.log("Es 7: completato");
@@ -173,7 +167,9 @@
       const paintItGreen = function () {
         const allUl = document.querySelectorAll("ul");
         console.log(allUl);
-        allUl.style;
+        for (let i = 0; i < allUl.length; i++) {
+          allUl[i].style = "background-color: green";
+        }
       };
       paintItGreen();
       console.log("Es 8: completato");
